--- a/verkefni_2/html/website.html
+++ b/verkefni_2/html/website.html
@@ -2,14 +2,51 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="witdt=device-width, initial-scale=1.0">
-	<title>test</title>
+	<link rel="stylesheet" type="text/css" href="../css/stylesheet.css">
+	<title>verkefni 2</title>
 </head>
 
 <html>
-<link rel="stylesheet" type="text/css" href="../css/stylesheet.css">
 <body>
-	<p>Hello, World!</p>
+	<h1>Hi, I'm the biggest head</h1>
+	<h2>Hi, I'm almost the biggest head</h2>
+	<h3>Hi, I'm not average, but at least I'm on the larger side</h3>
+	<h4>Hi, I'm not average, but I'm sadly on the smaller side</h4>	
+	<h5>Hi, I'm pretty small, but at least I'm not the smallest head</h5>
+	<h6>Hey! That offended me</h6>
+
+	<pre>x)<br>:3</pre>	
+	<hr>
+
+	<p style="padding-left: 10px">
+		List of things <strong>not</strong> to do on a <em>embedded machine
+		</em><sup>or do it anyway i don't care<sup><sup>or do i?<sup>no i don't</sup>
+		<sub>:)<sub></sup>
+	</p>
+
+	<ul>
+		<li class="the_bad_things">Program should <span style="color:red">never</span> execute outside of program space.</li>
+		<ul class="list_body">
+			The program can't stop, it will continue to execute forever and ever. 
+			To stop a program from causing a disaster, the program counter needs 
+			to be trapped in a endless loop.
+		</ul>
+
+		<li class="the_bad_things"><span style="color:red">Never</span> run undocumented opcodes unless you know what you are doing.</li>
+		<ul class=list_body>
+			Running undocemented opcodes can lead undefined code behavior and bugs.
+			In the worst case undefined opcodes can lock up the CPU,
+			cause a bus overload, and jam the pipeline
+		</ul>
+
+		<li class="the_bad_things"><span style="color:red">Never</span> use a computer component without it being properly initlized.</li>
+		<ul class="list_body">
+			most components on a computer need to be initlized before you can
+			properly use them, unless it can cause undefined behavior. Initlization
+			is done via something know as bootcode/IPL or for more complicated 
+			machines BIOS. Refer to the components datasheet for more info.
+		</ul>
+	</ul>	
 </body>
 </html>
