--- a/verkefni_4/html/second.html
+++ b/verkefni_4/html/second.html
@@ -7,6 +7,34 @@
 	<title>verkefni 4</title>
 </head>
 
-<nav>
-	<a href="website.html">back</a>
-</nav>
+<html>
+<body>
+	 <nav style="border: solid">
+		<a href="website.html">back</a>
+		<a href="">link_1</a>
+		<a href="">link_2</a>
+		<a href="">link_3</a>
+		<a href="">link_4</a>
+	</nav>
+
+	<header style="border: solid">
+		<h1>Stories</h1>
+	</header>
+	<main style="border: solid">
+		<article>
+John sat in front of his computer, staring at the blinking cursor on the screen. He had decided to take on the challenge of writing a bootloader in assembly language for the Atmega328p microchip on the Arduino Uno, and he knew it was going to be a daunting task. He began by pouring over the datasheet, studying every detail of the chip's architecture and instruction set.
+
+Slowly, he started to piece together the code, painstakingly assembling each instruction and testing it as he went. He ran into countless errors and setbacks along the way, but he persisted, determined to see his project through to the end.
+
+Days turned into weeks as John worked tirelessly on the bootloader, pouring over lines of code and tweaking every parameter to optimize performance. He became intimately familiar with the inner workings of the Atmega328p, learning its quirks and idiosyncrasies inside and out.
+
+Finally, after weeks of hard work, the bootloader was complete. John watched with bated breath as the chip booted up for the first time, his heart racing as he waited to see if his code would execute correctly. To his relief and delight, the bootloader worked flawlessly, ushering in a new era of possibilities for the Arduino Uno.
+		</article>
+		<aside class="main_thing">
+			<div>Sophie stood at the edge of the cliff, gazing out at the endless expanse of sea and sky. Her heart pounded in her chest as she contemplated what lay ahead. She had always dreamed of adventure, of seeing the world and experiencing all it had to offer. And now, after years of planning and saving, she was finally about to set out on a journey that would take her to the far corners of the earth. With a deep breath, Sophie stepped forward, her feet leaving the safety of solid ground, and soared out into the vast unknown.</div>
+			<div>Liam sat in front of his computer, staring at the blank screen. He had been tasked with designing a website for his client, but he was struggling to come up with ideas. He began to sketch out different layouts and color schemes, trying to find the perfect combination that would capture the essence of the client's brand. As he worked, his excitement grew, and he felt a sense of pride knowing that his design would be the first impression that many people would have of the client's business. Finally, after hours of work, Liam hit the "publish" button, and watched as his creation came to life on the internet.</div>
+			<div>Emma stood before her canvas, brush in hand, staring intently at the blank space before her. Her mind was buzzing with ideas and inspiration, and she felt the urge to create something beautiful. She began to mix her colors, carefully choosing each hue and shade to bring her vision to life. As she painted, she lost herself in the process, the world around her fading away until only the canvas and her brush remained. Finally, after hours of work, she stepped back to admire her creation. A beautiful landscape stretched out before her, a perfect representation of the beauty she saw in the world around her.</div>
+		</article>
+	</main>
+</body>
+</html>
