--- a/verkefni_4/html/website.html
+++ b/verkefni_4/html/website.html
@@ -9,6 +9,11 @@
 
 <html>
 <body>
+<main>
+	<nav style="border: solid">
+		<a href="second.html">file</a>
+	</nav>
+
 	<section class="media_1">
 		<div>
 The leaves of autumn fall so slow,
@@ -87,16 +92,5 @@ And as I gaze upon its silver glow,
 I feel my spirit start to grow.
 		</div>
 	</section>
-
-	<header></header>
-	<nav></nav>
-	<main></main>
-	<section></section>
-	<article></article>
-	<aside></aside>
-
-	<nav>
-		<a href="second.html">file</a>
-	</nav>
 </body>
 </html>
