--- a/verkefni_4/html/second.html
+++ b/verkefni_4/html/second.html
@@ -9,7 +9,7 @@
 
 <html>
 <body>
-	 <nav style="border: solid">
+	 <nav style="border: solid" class="menu">
 		<a href="website.html">back</a>
 		<a href="">link_1</a>
 		<a href="">link_2</a>
@@ -36,5 +36,8 @@ Finally, after weeks of hard work, the bootloader was complete. John watched wit
 			<div>Emma stood before her canvas, brush in hand, staring intently at the blank space before her. Her mind was buzzing with ideas and inspiration, and she felt the urge to create something beautiful. She began to mix her colors, carefully choosing each hue and shade to bring her vision to life. As she painted, she lost herself in the process, the world around her fading away until only the canvas and her brush remained. Finally, after hours of work, she stepped back to admire her creation. A beautiful landscape stretched out before her, a perfect representation of the beauty she saw in the world around her.</div>
 		</article>
 	</main>
+	<footer style="border: solid">
+		Nafn: Tómas Garðar
+	</footer>
 </body>
 </html>
