--- a/verkefni_7/html/website.html
+++ b/verkefni_7/html/website.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="witdt=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="../css/stylesheet.css">
-	<title>verkefni 6</title>
+	<title>verkefni 7</title>
 </head>
 
 <html>
@@ -44,7 +44,7 @@
 	      <th scope="col">Place</th>
 	      <th scope="col">Loudness</th>
 	      <th scope="col">Decibels</th>
-	      <th scope="col">a</th>
+	      <th scope="col">Felling</th>
 	    </tr>
 	  </thead>
 	  <tbody>
@@ -52,25 +52,25 @@
 	      <td data-label="Account">City</td>
 	      <td data-label="Due Date">Loud</td>
 	      <td data-label="Amount">60 - 70</td>
-	      <td data-label="Period">03/01/2016 - 03/31/2016</td>
+	      <td data-label="Period">Fine</td>
 	    </tr>
 	    <tr>
 	      <td scope="row" data-label="Account">Suburb</td>
 	      <td data-label="Due Date">Medium loud</td>
 	      <td data-label="Amount">50 - 60</td>
-	      <td data-label="Period">02/01/2016 - 02/29/2016</td>
+	      <td data-label="Period">Ok</td>
 	    </tr>
 	    <tr>
 	      <td scope="row" data-label="Account">Nature</td>
 	      <td data-label="Due Date">Not very loud</td>
 	      <td data-label="Amount">20 - 50</td>
-	      <td data-label="Period">02/01/2016 - 02/29/2016</td>
+	      <td data-label="Period">Ok</td>
 	    </tr>
 	    <tr>
 	      <td scope="row" data-label="Acount">Space</td>
 	      <td data-label="Due Date">Very quiet</td>
 	      <td data-label="Amount">NULL</td>
-	      <td data-label="Period">01/01/2016 - 01/31/2016</td>
+	      <td data-label="Period">Ok</td>
 	    </tr>
 	  </tbody>
 	</table>
